Fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -385,9 +385,9 @@ canvas {
   }
 
   .cake-wrap {
-    margin-top: 16px;
-    margin-bottom: 8px;
-  }
+  margin-top: 34px;
+  margin-bottom: 8px;
+}
 
   .cake-img {
     width: 170px;
